# Feature-based-mapping

./: .gitmodules
landmark_extract/: GT_vs_Odom.csv  package.xml  setup.cfg  setup.py
landmark_extract/Datalogging_scripts/: Compare_odom_to_truth.py  GT_vs_Odom.csv  GT_vs_Odom_vs_Est.csv  GT_vs_odom_vs_est_plot.py  Path_test_odom.py  ground_truth_vs_odom_log.py  gt_odom_est_log.py
landmark_extract/Datalogging_scripts.py/: GT_vs_odom_vs_est_plot.py  Path_test_gt.py
landmark_extract/Datalogging_scripts/Simple_scan_log/: Scan_plot.py  (+1 more)
landmark_extract/Simple_scan_log/: scanData_0.csv
landmark_extract/landmark_extract/: BSpline_V2.py  BSplinefit.py  BSplinefit_V3.py  Bezier_curve_extract.py  Bezierfit.py  Bezierfit_V2.py  EKF_SLAM_NODE.py  Feature_scan_SLAM.py  GT_vs_odom_plot.py  ICP_scan_to_scan.py  Lidar_scan_processing.py  Path_publisher.py  Spline_map_visualiser.py  Spline_test.py  motion_model.py  utils.py
my_cpp_pkg/: CMakeLists.txt  package.xml
particle_filter/: setup.py
particle_filter/config/: localize.yaml
particle_filter/maps/: Test_box.pgm  Test_box.yaml
particle_filter/particle_filter/: particle_filter.py
pf1/: package.xml  setup.py
pf1/pf1/: Compare_paths.py  Noisy_odom.py  pf.py
rosbags/Lab_husky_bag/: metadata.yaml
rosbags/Lab_husky_bag2/: metadata.yaml
rosbags/rosbag2_1970_01_01-02_37_22/: metadata.yaml
slam_interfaces/: CMakeLists.txt  package.xml
slam_interfaces/msg/: BsplineArray.msg  BsplineSegment.msg
voxel_slam/: package.xml  setup.cfg  setup.py
voxel_slam/Tests/: ICP3D_global.py  ICP3D_global2.py  ICP_3D.py  ICP_scan_to_global.py  ICP_scan_to_scan.py  Map_3D.py  Orb.py  Point_cloud_saver.py  SIFT.py  SURF.py  Spline_map.py  Start_pointcloud.ply  Utils.py  cubic_spline_surface_test.py  occupancy_map.py  second_scan.ply
voxel_slam/voxel_slam/: ICP_scan_to_map_node.py  ICP_scan_to_map_node2.py  ICP_scan_to_scan_node.py  ICP_scan_to_scan_node_2D.py  ICP_scan_to_scan_node_3D.py  Segmentation_ransac.py  Segmentation_ransac_voxel.py  Test_space.py  Vox_slam.py  Voxelise.py
(+34 files in other folders)
