<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_interfaces</name>
  <version>0.0.0</version>
  <description>Custom message definitions for SLAM applications</description>
  <maintainer email="delport121@gmail.com">Ruan</maintainer>
  <license>Apache 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional dependencies for linting -->
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
